--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@tensorflow/tfjs": "^1.0.0",
+    "artyom.js": "^1.0.6",
     "brain.js": "^1.6.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
